[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
itertools = "0.12"
winnow = "0.5"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
all = "warn"